done task project

--- a/src/Components/Button/index.module.scss
+++ b/src/Components/Button/index.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    max-height: 42px;
+    height: 42px;
     font-family: var(--font-mono);
     border: 1px solid var(--blue);
     background-color: transparent;
